Add Apple Sign In, update app icons, and improve gitignore
- Integrated Apple Sign In authentication flow
- Updated iOS and Android app icons with new design
- Added iOS privacy manifest (PrivacyInfo.xcprivacy)
- Added iOS entitlements for Sign in with Apple
- Removed deprecated settings page
- Updated gitignore to exclude Firebase cache, keystore scripts, launcher assets, and marketing site

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase
+.firebase/
+
+# Keystore scripts (potentially sensitive)
+android/app/create_keystore.sh
+
+# Launcher icon source files
+assets/launcher/
+
+# Marketing site (separate project)
+marketing_site/
