--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,23 +46,31 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	
+	<!-- Encryption declaration for App Store -->
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	
 	<!-- Permissions for image picking -->
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo library to select images for ratings.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to your camera to take photos for ratings.</string>
 	
-	<!-- Network permissions for real devices -->
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-		<key>NSAllowsArbitraryLoadsInWebContent</key>
-		<true/>
-	</dict>
-	
-	<!-- Local network permission for Flutter debugging -->
+	<!-- Local network permission -->
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>This app needs access to local network for development and debugging purposes.</string>
+	<string>This app needs access to local network to connect with other devices.</string>
+	
+	<!-- Google Sign In URL scheme -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.167019643162-4l38tjhh14mlrhp5n4f9dnt0a86iklk2</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
