--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: group_ratings_app
-description: ""
+description: "A collaborative group ratings app for sharing and rating items with your groups."
 publish_to: "none"
-version: 0.0.0+1
+version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: ^5.3.3
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.3
+  crypto: ^3.0.3
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
@@ -30,10 +31,13 @@ dependencies:
   glassmorphism: ^3.0.0
   flutter_staggered_animations: ^1.1.1
   lottie: ^3.1.2
+  sign_in_with_apple: ^7.0.1
+  intl: ^0.20.2
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/launcher/logo.png"
   web:
     generate: true
