--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,13 @@
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This app needs access to local network to connect with other devices.</string>
 	
+	<!-- Bonjour services for Flutter debugging -->
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+		<string>_http._tcp</string>
+	</array>
+	
 	<!-- Google Sign In URL scheme -->
 	<key>CFBundleURLTypes</key>
 	<array>
