--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: group_ratings_app
 description: "A collaborative group ratings app for sharing and rating items with your groups."
 publish_to: "none"
-version: 1.0.6+6
+version: 1.0.7+7
 
 environment:
   sdk: ^3.8.1
@@ -20,19 +20,16 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   get: ^4.6.1
   get_storage: ^2.0.3
-  go_router: ^14.2.0
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
   permission_handler: ^11.3.1
   uuid: ^4.5.1
   # Modern UI packages
-  shimmer: ^3.0.0
-  glassmorphism: ^3.0.0
-  flutter_staggered_animations: ^1.1.1
   lottie: ^3.1.2
   sign_in_with_apple: ^7.0.1
   intl: ^0.20.2
+  http: ^1.1.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -53,6 +50,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/data/
     - assets/launcher/
     - assets/animations/
